add route in swagger and fix some bugs
